--- a/HTML Calculator/index.html
+++ b/HTML Calculator/index.html
@@ -10,12 +10,12 @@
     <div id="shape">
         <div id="display"></div>
         <div id="buttonsRow">
-            <div class="optionButton" id="MC" type="button" href="#">MC</div>
-            <div class="optionButton" id="MR">MR</div>
-            <div class="optionButton" id="M+">M+</div>
-            <div class="optionButton" id="M-">M-</div>
-            <div class="optionButton" id="MS">MS</div>
-            <div class="optionButton" id="M...">M...</div>
+            <button class="optionButton" id="MC" type="button" href="#">MC</button>
+            <button class="optionButton" id="MR">MR</button>
+            <button class="optionButton" id="M+">M+</button>
+            <button class="optionButton" id="M-">M-</button>
+            <button class="optionButton" id="MS">MS</button>
+            <button class="optionButton" id="M...">M...</button>
         </div>
         <div id="numPad">
             <div class="numPadRow" id="npr1"></div>
