--- a/HTML Calculator/index.html
+++ b/HTML Calculator/index.html
@@ -18,9 +18,38 @@
             <button class="optionButton" id="M...">M...</button>
         </div>
         <div id="numPad">
-            <div class="numPadRow" id="npr1"></div>
-            <div class="numPadRow" id="npr2"></div>
-            <div class="numPadRow" id="npr3"></div>
+            <div class="numPadRow" id="npr1">
+                <button class="numPadButton" id="#">#</button>
+                <button class="numPadButton" id="/">/</button>
+                <button class="numPadButton" id="*">*</button>
+                <button class="numPadButton" id="-">-</button>
+            </div>
+            <div class="numPadRow" id="npr2">
+                <button class="numPadButton" id="7">7</button>
+                <button class="numPadButton" id="8">8</button>
+                <button class="numPadButton" id="9">9</button>
+                <button class="numPadButton" id="+">+</button>
+            </div>
+            <div class="numPadRow" id="npr3">
+                <button class="numPadButton" id="4">4</button>
+                <button class="numPadButton" id="5">5</button>
+                <button class="numPadButton" id="6">6</button>
+                <button class="numPadButton" id=".">.</button>
+            </div>
+            <div id="numPadLower">
+                <div id="numPadLowerLeft">
+                    <div class="numPadRow2">
+                        <button class="numPadButton" id="1">1</button>
+                        <button class="numPadButton" id="2">2</button>
+                        <button class="numPadButton" id="3">3</button>
+                    </div>
+                    <div class="numPadRow3">
+                        <button id="button0">0</button>
+                        <button class="numPadButton" id="comma">,</button>
+                    </div>
+                </div>
+                <button id="buttonEnter">Enter</button>
+            </div>
         </div>
     </div>
 </body>
